Working on expression language support

--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/cameratemplate/CameraTemplateEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/cameratemplate/CameraTemplateEditor.fxml
@@ -10,10 +10,10 @@
 
 <BorderPane id="BorderPane" maxHeight="-1.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.cameratemplate.CameraTemplateEditorController">
   <center>
-    <VBox prefHeight="-1.0" prefWidth="-1.0" spacing="0.0">
+    <GridPane hgap="5.0">
       <children>
-        <Label text="Camera type" />
-        <ComboBox fx:id="cameraType" maxWidth="1.7976931348623157E308">
+        <Label text="Camera type:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <ComboBox fx:id="cameraType" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="0">
           <items>
             <FXCollections fx:factory="observableArrayList">
               <String fx:value="Item 1" />
@@ -23,7 +23,14 @@
           </items>
         </ComboBox>
       </children>
-    </VBox>
+      <columnConstraints>
+        <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="-1.0" />
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="-1.0" />
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+      </rowConstraints>
+    </GridPane>
   </center>
   <padding>
     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
