--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/ObjectInspector.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/ObjectInspector.fxml
@@ -12,7 +12,7 @@
       <content>
         <BorderPane maxHeight="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0">
           <center>
-            <VBox fx:id="propertyPanels" prefHeight="-1.0" prefWidth="-1.0" />
+            <Accordion fx:id="propertyPanels" expandedPane="$null" />
           </center>
         </BorderPane>
       </content>
