--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/eventsheet/EventSheetEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/eventsheet/EventSheetEditor.fxml
@@ -8,19 +8,22 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane id="BorderPane" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="de.mirkosertic.gamecomposer.objectinspector.eventsheet.EventSheetEditorController">
-  <center>
-    <VBox>
+<BorderPane id="BorderPane" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.eventsheet.EventSheetEditorController">
+  <left>
+    <GridPane hgap="5.0">
       <children>
-        <HBox>
-          <children>
-            <Label prefWidth="70.0" text="Name" />
-            <TextField fx:id="nameTextField" HBox.hgrow="ALWAYS" />
-          </children>
-        </HBox>
+        <Label prefWidth="-1.0" text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <TextField fx:id="nameTextField" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="0" />
       </children>
-    </VBox>
-  </center>
+      <columnConstraints>
+        <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" minWidth="-1.0" prefWidth="-1.0" />
+        <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="-1.0" />
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+      </rowConstraints>
+    </GridPane>
+  </left>
   <padding>
     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
   </padding>
