--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gameobject/GameObjectEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gameobject/GameObjectEditor.fxml
@@ -7,39 +7,39 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="de.mirkosertic.gamecomposer.objectinspector.gameobject.GameObjectEditorController">
+<BorderPane id="BorderPane" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.gameobject.GameObjectEditorController">
   <center>
     <VBox>
       <children>
         <GridPane hgap="5.0">
           <children>
-            <Label text="UUID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <Label text="Name" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <Label text="UUID:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+            <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
             <Label text="Size" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-            <HBox id="uuidTextField" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="0">
+            <HBox id="uuidTextField" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="0">
               <children>
                 <TextField fx:id="uuidTextField" disable="true" editable="false" HBox.hgrow="ALWAYS" />
               </children>
             </HBox>
-            <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-            <Label prefWidth="40.0" text="Width" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label prefWidth="40.0" text="Height" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <TextField fx:id="nameTextField" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
+            <Label prefWidth="40.0" text="Width:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label prefWidth="40.0" text="Height:" GridPane.columnIndex="3" GridPane.rowIndex="2" />
             <TextField fx:id="widthTextField" prefWidth="45.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <TextField fx:id="heightTextField" prefWidth="45.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
             <CheckBox id="active" fx:id="visible" mnemonicParsing="false" text="Visible" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
           </children>
           <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+            <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+            <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
           </columnConstraints>
           <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+            <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+            <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+            <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
           </rowConstraints>
         </GridPane>
         <VBox fx:id="componentAddHyperlinks" />
