--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/physicstemplate/PhysicsTemplateEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/physicstemplate/PhysicsTemplateEditor.fxml
@@ -9,7 +9,7 @@
 
 <BorderPane id="BorderPane" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.physicstemplate.PhysicsTemplateEditorController">
   <center>
-    <GridPane maxWidth="1.7976931348623157E308">
+    <GridPane hgap="5.0" maxWidth="1.7976931348623157E308">
       <children>
         <CheckBox fx:id="fixedRotation" mnemonicParsing="false" text="Fixed rotation" GridPane.columnIndex="0" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
         <CheckBox id="fixedRotation" fx:id="active" mnemonicParsing="false" text="Active" GridPane.columnIndex="0" GridPane.rowIndex="0" />
@@ -27,12 +27,12 @@
         <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" />
       </columnConstraints>
       <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+        <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+        <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+        <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+        <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+        <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
       </rowConstraints>
       <BorderPane.margin>
         <Insets />
