--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/platformtemplate/PlatformTemplateEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/platformtemplate/PlatformTemplateEditor.fxml
@@ -8,12 +8,12 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane id="BorderPane" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="de.mirkosertic.gamecomposer.objectinspector.platformtemplate.PlatformTemplateEditorController">
+<BorderPane id="BorderPane" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.platformtemplate.PlatformTemplateEditorController">
   <center>
-    <GridPane maxWidth="1.7976931348623157E308">
+    <GridPane hgap="5.0" maxWidth="1.7976931348623157E308">
       <children>
-        <Label text="Move-Left Key" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <ComboBox fx:id="moveLeftKey" GridPane.columnIndex="1" GridPane.rowIndex="0">
+        <Label text="Move-Left:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <ComboBox fx:id="moveLeftKey" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="0">
           <items>
             <FXCollections fx:factory="observableArrayList">
               <String fx:value="Item 1" />
@@ -22,8 +22,8 @@
             </FXCollections>
           </items>
         </ComboBox>
-        <Label text="Jump-Key" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <ComboBox fx:id="moveRightKey" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <Label text="Jump-Key:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <ComboBox fx:id="moveRightKey" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1">
           <items>
             <FXCollections fx:factory="observableArrayList">
               <String fx:value="Item 1" />
@@ -32,7 +32,7 @@
             </FXCollections>
           </items>
         </ComboBox>
-        <ComboBox id="jumpImpulse" fx:id="jumpKey" GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <ComboBox id="jumpImpulse" fx:id="jumpKey" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2">
           <items>
             <FXCollections fx:factory="observableArrayList">
               <String fx:value="Item 1" />
@@ -41,22 +41,22 @@
             </FXCollections>
           </items>
         </ComboBox>
-        <Label text="Left-Right Impulse" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-        <Label text="Jump Impulse" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-        <Label text="Move-Right Key" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField fx:id="leftRightImpulse" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-        <TextField fx:id="jumpImpulse" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Label text="L-R Impulse:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <Label text="Jump Impulse:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <Label text="Move-Right:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <TextField fx:id="leftRightImpulse" maxWidth="1.7976931348623157E308" prefWidth="80.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <TextField fx:id="jumpImpulse" maxWidth="1.7976931348623157E308" prefWidth="80.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       </children>
       <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="80.0" minWidth="-1.0" prefWidth="-1.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="80.0" minWidth="10.0" prefWidth="-1.0" />
       </columnConstraints>
       <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+        <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+        <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+        <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+        <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
       </rowConstraints>
     </GridPane>
   </center>
