--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/statictemplate/StaticTemplateEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/statictemplate/StaticTemplateEditor.fxml
@@ -12,11 +12,7 @@
 
 <BorderPane id="BorderPane" maxHeight="-1.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.statictemplate.StaticTemplateEditorController">
   <center>
-    <VBox maxHeight="-Infinity" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" spacing="0.0">
-      <children>
-        <Label prefHeight="140.0" prefWidth="130.0" text="A static component is not movable in the scene. It can be used together with physics to demarcate a border or something the player can stand on." wrapText="true" />
-      </children>
-    </VBox>
+    <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="140.0" prefWidth="130.0" text="A static component is not movable in the scene. It can be used together with physics to demarcate a border or something the player can stand on." wrapText="true" />
   </center>
   <padding>
     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
