--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/setproperty/SetPropertyEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/setproperty/SetPropertyEditor.fxml
@@ -12,10 +12,20 @@
   <center>
     <GridPane hgap="5.0" vgap="5.0">
       <children>
-        <TextField fx:id="propertyValueTextField" maxWidth="1.7976931348623157E308" minHeight="-Infinity" visible="false" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
-        <Label text="Property:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <Label text="New Value:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <ComboBox fx:id="propertyName" maxWidth="1.7976931348623157E308" onAction="#onSelectProperty" GridPane.columnIndex="1" GridPane.rowIndex="0">
+        <TextField fx:id="propertyValueTextField" maxWidth="1.7976931348623157E308" minHeight="-Infinity" visible="false" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
+        <Label text="Property:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <Label text="New Value:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <ComboBox fx:id="propertyName" maxWidth="1.7976931348623157E308" onAction="#onSelectProperty" GridPane.columnIndex="1" GridPane.rowIndex="1">
+          <items>
+            <FXCollections fx:factory="observableArrayList">
+              <String fx:value="Item 1" />
+              <String fx:value="Item 2" />
+              <String fx:value="Item 3" />
+            </FXCollections>
+          </items>
+        </ComboBox>
+        <Label text="Gameobject:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <ComboBox id="propertyName" fx:id="gameObject" maxWidth="1.7976931348623157E308" onAction="#onSelectProperty" GridPane.columnIndex="1" GridPane.rowIndex="0">
           <items>
             <FXCollections fx:factory="observableArrayList">
               <String fx:value="Item 1" />
@@ -30,6 +40,7 @@
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
       </columnConstraints>
       <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
