--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/constantmovement/ConstantMovementEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/constantmovement/ConstantMovementEditor.fxml
@@ -12,10 +12,10 @@
   <center>
     <GridPane hgap="5.0" maxWidth="1.7976931348623157E308">
       <children>
-        <Label prefWidth="70.0" text="Angle:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <TextField id="nameTextField" fx:id="angleTextField" maxWidth="1.7976931348623157E308" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-        <Label maxWidth="-1.0" prefWidth="-1.0" text="Speed:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField fx:id="speedTextField" maxWidth="1.7976931348623157E308" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Label maxWidth="-1.0" prefWidth="-1.0" text="Speed:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <TextField fx:id="speedTextField" maxWidth="1.7976931348623157E308" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <Label maxWidth="-1.0" prefWidth="-1.0" text="Rot. Speed:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <TextField id="speedTextField" fx:id="rotationSpeedTextField" maxWidth="1.7976931348623157E308" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       </children>
       <columnConstraints>
         <ColumnConstraints fillWidth="false" hgrow="NEVER" maxWidth="-Infinity" minWidth="10.0" prefWidth="-1.0" />
