--- a/gamecomposer/src/main/resources/skin/undecoratorUtilityStage.css
+++ b/gamecomposer/src/main/resources/skin/undecoratorUtilityStage.css
@@ -1,4 +1,4 @@
-/*
+/* 
     Document   : Undecorator
     Created on : Jan 15, 2013, 8:42:25 AM
     Author     : In-SideFX
@@ -17,7 +17,12 @@
     -fx-arc-width:25;
     -fx-arc-height:25;*/
 }
-
+/*
+    The title bar label
+*/
+.undecorator-label-titlebar{
+    -fx-text-fill: #000000;
+}
 /*
 *	Menu button
 */
