--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.fxml
@@ -37,6 +37,7 @@
           <items>
             <MenuItem mnemonicParsing="false" onAction="#onSaveAndExportHTML5GWT" text="%menu.exportashtmlgwt" />
             <MenuItem mnemonicParsing="false" onAction="#onSaveAndExportHTML5Dragome" text="%menu.exportashtmldragome" />
+            <MenuItem mnemonicParsing="false" onAction="#onSaveAndExportHTML5TeaVM" text="%menu.exportashtmlteavm" />
             <MenuItem mnemonicParsing="false" onAction="#onSaveAndExportAndroid" text="%menu.exportasandroid" />
           </items>
         </Menu>
