--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/EventSheetEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/EventSheetEditor.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.web.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.geometry.*?>
@@ -7,24 +8,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.contentarea.eventsheet.EventSheetEditorController">
+<BorderPane id="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.mirkosertic.gamecomposer.contentarea.eventsheet.EventSheetEditorController">
   <center>
-    <ScrollPane fitToHeight="false" fitToWidth="false" hbarPolicy="AS_NEEDED" maxWidth="1.7976931348623157E308" pannable="false" prefHeight="-1.0" prefWidth="-1.0">
-      <content>
-        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-          <children>
-            <Hyperlink onAction="#onAddNewRule" text="Add new  rule" />
-            <VBox fx:id="rulesList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-              <VBox.margin>
-                <Insets top="10.0" />
-              </VBox.margin>
-            </VBox>
-          </children>
-        </VBox>
-      </content>
+    <ScrollPane fitToWidth="true" hbarPolicy="AS_NEEDED" maxHeight="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" vbarPolicy="ALWAYS">
+         <content>
+      <VBox fx:id="rulesList" />
+         </content>
     </ScrollPane>
   </center>
   <padding>
     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
   </padding>
+   <top>
+<Hyperlink onAction="#onAddNewRule" text="Add new  rule" BorderPane.alignment="TOP_LEFT" />
+   </top>
 </BorderPane>
