--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/EventSheetEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/EventSheetEditor.fxml
@@ -9,17 +9,13 @@
 <?import javafx.scene.paint.*?>
 
 <BorderPane id="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.mirkosertic.gamecomposer.contentarea.eventsheet.EventSheetEditorController">
-  <center>
-    <ScrollPane fitToWidth="true" hbarPolicy="AS_NEEDED" maxHeight="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" vbarPolicy="ALWAYS">
-         <content>
-      <VBox fx:id="rulesList" />
-         </content>
-    </ScrollPane>
-  </center>
   <padding>
     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
   </padding>
    <top>
 <Hyperlink onAction="#onAddNewRule" text="Add new  rule" BorderPane.alignment="TOP_LEFT" />
    </top>
+   <center>
+      <ListView fx:id="rules" focusTraversable="false" BorderPane.alignment="TOP_LEFT" />
+   </center>
 </BorderPane>
