--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/GameComposer.fxml
@@ -11,7 +11,7 @@
 
 <BorderPane id="BorderPane" fx:id="borderPane" disable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="600.0" minWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.mirkosertic.gamecomposer.GameComposerController">
   <bottom>
-    <Label fx:id="statusBar" maxWidth="1.7976931348623157E308" style="-fx-background-color: rgb(200,200,200);" text="" BorderPane.alignment="CENTER_LEFT">
+    <Label fx:id="statusBar" maxWidth="1.7976931348623157E308" styleClass="gameToolBar" text="" BorderPane.alignment="CENTER_LEFT">
       <BorderPane.margin>
         <Insets />
       </BorderPane.margin>
