--- a/gamecomposer/src/main/resources/fxstyle.less
+++ b/gamecomposer/src/main/resources/fxstyle.less
@@ -60,3 +60,8 @@
   -fx-border-color: lighten(@splittercolor, 20%);
   -fx-padding: 0 0.1em 0 0.1em;
 }
+
+.gameToolBar {
+  -fx-background-color: @groupboxbackgroundcolor;
+  -fx-text-fill: @groupboxtextcolor;
+}
